--- a/wp-content/themes/srijanalaya/less/calender.less
+++ b/wp-content/themes/srijanalaya/less/calender.less
@@ -17,21 +17,22 @@
 
 
 @clndr-border: 1px solid #000;
-
-
 @box-size: 30px;
 
+h2 {
+    font-family: allerregular;
+}
 .clndr-wrap
 {
     max-width: 280px;
     margin: 30px auto;
-    font-family: 'Helvetica' 'sans-serif';
+    font-family: 'bree serif' 'sans-serif';
     font-size: 13px;
     margin-left: -20px;
     .clndr
     {
         .clndr-transparent-block {
-            height: 260px;
+            height: 280px;
             width: 280px;
             background-color: rgba(0, 0, 0, 0.8);
             position: absolute;
@@ -116,7 +117,7 @@
                 color: #e91f4a;
                 border: 1px solid #ebebeb;
                 border-radius: 30px 30px;
-                font-family: 'Helvetica Bold' 'sans-serif';
+                font-family: 'bree serif' 'sans-serif';
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -206,4 +207,8 @@
         opacity: 0.5;
         cursor: default;
     }
+}
+
+.fixed h2 {
+    margin-left: -15px;
 }
