--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1,16 +1,5 @@
 // bootstrap
 @import "bootstrap.less";
-@import "yamm.less";
-@import "timeline.less";
-@import "calender.less";
-@black: #000000;
-@white: #ffffff;
-@gray: #666666;
-@light-gray: #eaeaea;
-@theme-black: #191919;
-
-@orange: #ff3d2e;
-@brown: brown;
 
 //font
 @font-face {
@@ -22,19 +11,37 @@
   url('../fonts/breeserif-regular-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
   url('../fonts/breeserif-regular-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
-
 @font-face {
     font-family: 'allerregular';
-    src: url('aller_std_rg-webfont.eot');
-    src: url('aller_std_rg-webfont.eot?#iefix') format('embedded-opentype'),
-    url('aller_std_rg-webfont.woff2') format('woff2'),
-    url('aller_std_rg-webfont.woff') format('woff'),
-    url('aller_std_rg-webfont.ttf') format('truetype'),
-    url('aller_std_rg-webfont.svg#allerregular') format('svg');
+    src: url('../fonts/aller_std_rg-webfont.eot');
+    src: url('../fonts/aller_std_rg-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/aller_std_rg-webfont.woff2') format('woff2'),
+    url('../fonts/aller_std_rg-webfont.woff') format('woff'),
+    url('../fonts/aller_std_rg-webfont.ttf') format('truetype'),
+    url('../fonts/aller_std_rg-webfont.svg#allerregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
 }
+
+//others
+@import "yamm.less";
+@import "timeline.less";
+@import "calender.less";
+
+//variables
+@black: #000000;
+@white: #ffffff;
+@gray: #666666;
+@light-gray: #eaeaea;
+@theme-black: #191919;
+
+@orange: #ff3d2e;
+@brown: brown;
+
+
+
+
 
 html {
     overflow-x: hidden;
