--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -71,7 +71,7 @@ header h1 {
   position: absolute;
   top: 0;
   left: 18px;
-  height: 100%;
+  height: 115%;
   width: 4px;
   background: #cececd;
 }
@@ -141,7 +141,7 @@ header h1 {
     top: 32%;
     font-size: 20px;
     color: #FFF;
-    font-family: helvetica;
+    font-family: 'bree serif';
     font-weight: bold;
   }
 }
@@ -308,12 +308,12 @@ header h1 {
         h2 {
           color: #e91f4a;
           font-size: 16px;
-          font-family:'Helvetica Bold';
+          font-family:'bree serif';
         }
         p {
           color: #807f7f;
           font-size: 12px;
-          font-family:'Helvetica';
+          font-family:'bree serif';
         }
         .small-text img {
           margin-top: -2px;
@@ -349,7 +349,7 @@ header h1 {
   .project-wrapper-right::before {
     position: absolute;
     height: 125px;
-    left: 5%;
+    left: 5.42%;
     top: -3px;
     border-bottom: 20px solid transparent;
     border-left: 20px solid #FFF;
@@ -359,7 +359,7 @@ header h1 {
   .project-wrapper-right::after {
     position: absolute;
     height: 135px;
-    left: 5%;
+    left: 5.42%;
     top: 50%;
     border-top: 20px solid transparent;
     border-left: 20px solid #FFF;
@@ -537,6 +537,13 @@ header h1 {
  border-radius: 50%;
  margin: 0 auto;
 }
+.bottom-circle {
+  margin-top: 22%;
+}
 #cd-timeline {
   margin-top: 0px;
+}
+.fixed {
+  position: fixed;
+  right: 10px;
 }
