--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -184,7 +184,7 @@ a:hover {
     align-items:center;
     justify-content:center;
     img {
-    display:inline-block;   
+        display:inline-block;   
     }
 }
 .transbg {
@@ -193,9 +193,9 @@ a:hover {
     background:black;
     opacity:0.95;
     position: absolute;
-left: 0px;
-top: 0px;
-z-index: -1;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
 
 
 }
@@ -313,11 +313,11 @@ z-index: -1;
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -330,9 +330,9 @@ z-index: -1;
 }
 }
 #slider-1 .item h1 {
- color:#E9204A;
+   color:#E9204A;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -382,7 +382,7 @@ z-index: -1;
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -419,33 +419,33 @@ z-index: -1;
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:0;
-   .btn {
-     display:inline-block;
-     padding-top:25px;
-     font-size:20px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:70px;
-     width:150px;
-     border-radius: 150px 150px 0 0;
-     -moz-border-radius: 150px 150px 0 0;
-     -webkit-border-radius: 150px 150px 0 0;
-     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-        height:50px;
-        width:100px;
-        font-size:10px;
-    }
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:0;
+ .btn {
+   display:inline-block;
+   padding-top:25px;
+   font-size:20px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:70px;
+   width:150px;
+   border-radius: 150px 150px 0 0;
+   -moz-border-radius: 150px 150px 0 0;
+   -webkit-border-radius: 150px 150px 0 0;
+   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+    height:50px;
+    width:100px;
+    font-size:10px;
+}
 }
 }
 .pink {
@@ -518,24 +518,24 @@ z-index: -1;
     }
     &:hover{
         .outimg {
-           -webkit-transform:scale(1.1);
-           -moz-transform:scale(1.1);
-           transform:scale(1.1);
-           -o-transform:scale(1.1);
-       }
-   }
+         -webkit-transform:scale(1.1);
+         -moz-transform:scale(1.1);
+         transform:scale(1.1);
+         -o-transform:scale(1.1);
+     }
+ }
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -546,8 +546,8 @@ z-index: -1;
         -o-transform:scale(1.1);
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -576,9 +576,9 @@ z-index: -1;
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .section-container {
     padding: 0;
@@ -703,7 +703,6 @@ z-index: -1;
     height: 100%;
     width: 100%;
     position: absolute;
-    top:50%;
     left: 0;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAARklEQVQYV4XQ2wkAIAwDQB1D91/NOkakguKjbfJ9JJAMAImkd0mZQUWl1BgupINu44lc+CITWuiDHrpghDZkaEKRBv2JZQDpyUKXo4UsOAAAAABJRU5ErkJggg==) repeat;
     .inner-wrap {
@@ -721,6 +720,9 @@ z-index: -1;
             text-align: center;
         }
     }
+}
+#section4 .quote-wrap {
+    top:50%;
 }
 .quote-wrap .footer-bar {
     top:50%;
@@ -762,49 +764,50 @@ z-index: -1;
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 233px;
     @media(max-width:769px) {
+        width: 25%;
     }
-    width: 25%;
     h4 {
         display: inline-block;
         width: 55px;
-        margin-right: 1px;
+        box-sizing: border-box;
+        border-right: 1px solid #575656;
         text-align: center;
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
 }
 }
 
 
 .nav-icons {
-list-style-type:none;
+    list-style-type:none;
     position: fixed;
     right: 40px;
     bottom: 20px;
     z-index: 100;
     ul {
-    list-style-type:none;
+        list-style-type:none;
         margin-bottom: 0;
         li {
-        list-style-type:none;
+            list-style-type:none;
             margin-bottom: 5px;
             a {
                 background-color: @theme-black;
@@ -817,7 +820,7 @@ list-style-type:none;
                 height: 70px;           
                 line-height: 60px;
                 text-align: center;
-               
+
                 span {
                     border-radius: 10px;
                     background: @theme-black;
@@ -925,14 +928,14 @@ list-style-type:none;
 }
 .progressbar {
     height:8px;
- 
+
     background:#E1E1E1;
 }
 #bar1 ,#bar2 ,#bar3 {
     background-color:#E8234B;;
     height:100%;
-   width:0px;
-   padding-left:0px;
+    width:0px;
+    padding-left:0px;
     padding-right:0px;
     -webkit-transition: width 3000ms;
     transition: width 3000ms;
@@ -960,7 +963,7 @@ list-style-type:none;
     @media(max-width:650px) {
         margin-top: 0;
     }
-    }
+}
 .topbanner {
     height:500px;
     background-color:@theme-black;
@@ -980,3 +983,50 @@ list-style-type:none;
     height: 375px;
 }
 
+.footer {
+    height: 370px;
+    margin-top: 150px;
+    @media (max-width: 769px) {
+        text-align: center;
+    }
+    #fsection1, #fsection2 {
+        @media (max-width: 769px) {
+            width:50%;
+        }
+    }
+    #fsection1 {
+        @media (max-width: 769px) {
+            box-sizing: border;
+            border-right: 1px solid #575656; 
+        }
+    }
+    .quote-wrap .footer-bar .social-block {
+        @media (max-width: 769px) {
+            width: 100%;
+            min-width: 100%;
+        }
+        h4 {
+            @media (max-width: 769px) {
+                width: 25%;
+            }
+        }
+        p {
+            @media (max-width: 769px) {
+                width: 100%;
+                margin-bottom: 0;
+            }
+        }
+        .newsletter {
+            padding-top: 60px;
+            box-sizing: border;
+            border-bottom: 1px solid #575656; 
+            @media (max-width: 769px) {
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
+}
+.home .footer {
+    margin-top: 0;
+}
