--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -246,7 +246,7 @@ header h1 {
   clear: both;
 }
 .cd-timeline-content h2 {
-  color: #303e49;
+  color: #e91f4a;
 }
 .cd-timeline-content p, .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
   font-size: 13px;
@@ -306,7 +306,7 @@ header h1 {
     .project-wrapper {
       background-size: cover;
       min-height: 200px;
-      width: 99%;
+      width: 98%;
       .content {
         position: absolute;
         top: 230px;
@@ -347,6 +347,7 @@ header h1 {
     content: " ";
   }
   .project-wrapper-right {
+    margin-left: 1px;
     .content {
       left: 45px;
     }
