--- a/wp-content/themes/srijanalaya/less/calender.less
+++ b/wp-content/themes/srijanalaya/less/calender.less
@@ -67,6 +67,9 @@ h2 {
                     color: #FFF;
                     font-size: 12px;
                 }
+                a:hover {
+                    color: #e91f4a;
+                }
             }
         }
         .clndr-controls
