--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -199,6 +199,15 @@ a:hover {
 
 
 }
+.navbar {
+    border: none;
+}
+.dropdown-menu {
+    background-color: #8cc344 !important;
+    a {
+     color: #FFF !important;
+    }  
+}
 #myNavbar {
     background-color: @backgroundGrey;
     max-height: 35px;
@@ -210,47 +219,47 @@ a:hover {
         max-height: 35px;
         font-size: 12px; 
         .dropdown-menu {
-            padding: 0 0 2% 8%;
-            margin-top: -3px !important;
-            ul {
-                border-right: 1px Solid #6d6d6d;
-                padding-left: 30px;
-                &:last-child {
-                    border-right: none;
-                }
-                @media (max-width: 850px) {
-                    padding-left: 5px;
-                    font-size: 9px;
-                }
+          padding: 0 0 2% 8%;
+          margin-top: -3px !important;
+          ul {
+            border-right: 1px Solid #6d6d6d;
+            padding-left: 30px;
+            &:last-child {
+                border-right: none;
             }
-        }
-        li {
-            max-height: 35px;
-            a {
-                color: @fontColor;
-                margin: 0;
-                padding-top: 8px; 
-
+            @media (max-width: 850px) {
+                padding-left: 5px;
+                font-size: 9px;
             }
-            &:hover {
-                .dropdown-menu {
-                    background-color: #8cc344;
-                }
-                a {
-                    background-color: #8cc344;
-                    color:#FFF;
-                }
-            }
-            
-        }
-        @media (max-width: 850px) {
-            font-size: 10px;
-            margin-left: 30px;
-        }
-        .first {
-            border-left: 1px Solid #6d6d6d;
         }
     }
+    li {
+        max-height: 35px;
+        a {
+            color: @fontColor;
+            margin: 0;
+            padding-top: 8px; 
+
+        }
+        &:hover {
+            .dropdown-menu {
+                background-color: #8cc344;
+            }
+            a {
+                background-color: #8cc344;
+                color:#FFF;
+            }
+        }
+
+    }
+    @media (max-width: 850px) {
+        font-size: 10px;
+        margin-left: 30px;
+    }
+    .first {
+        border-left: 1px Solid #6d6d6d;
+    }
+}
 }
 .wrapper {
     margin-top: -35px;
@@ -1038,4 +1047,28 @@ a:hover {
         padding-top: 60px;
         color: #FFF;
     }
+}
+
+#map {
+    width: 100%;
+    height: 450px;
+}
+
+.page-content {
+    padding-top: 60px;
+    h2 {
+        font-size: 20px;
+    }
+    p {
+        color: #807f7f;
+        font-size: 12px;
+    }
+}
+.mid-nav {
+    width: 100%;
+    height: 35px;
+    background-color: #f2f2f2;
+    -webkit-box-shadow: 0px 6px 5px 0px rgba(221, 221, 221, 0.75);
+    -moz-box-shadow:    0px 6px 5px 0px rgba(221, 221, 221, 0.75);
+    box-shadow:         0px 6px 5px 0px rgba(221, 221, 221, 0.75);
 }
