--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -89,7 +89,7 @@ h2 {
 p, .footer-bar {
 
     font-size: 20px;
-    font-family: 'allerregular';
+    font-family: 'Helvetica';
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
         font-size:15px;
@@ -205,8 +205,8 @@ a:hover {
 .dropdown-menu {
     background-color: #8cc344 !important;
     a {
-       color: #FFF !important;
-   }  
+     color: #FFF !important;
+ }  
 }
 #myNavbar {
     background-color: @backgroundGrey;
@@ -235,6 +235,7 @@ a:hover {
     }
     li {
         max-height: 35px;
+        overflow: hidden;
         a {
             color: @fontColor;
             margin: 0;
@@ -322,11 +323,11 @@ a:hover {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -339,9 +340,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
- color:#E9204A;
+   color:#E9204A;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -391,7 +392,7 @@ a:hover {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -428,33 +429,33 @@ a:hover {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:0;
-   .btn {
-     display:inline-block;
-     padding-top:25px;
-     font-size:20px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:70px;
-     width:150px;
-     border-radius: 150px 150px 0 0;
-     -moz-border-radius: 150px 150px 0 0;
-     -webkit-border-radius: 150px 150px 0 0;
-     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-        height:50px;
-        width:100px;
-        font-size:10px;
-    }
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:0;
+ .btn {
+   display:inline-block;
+   padding-top:25px;
+   font-size:20px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:70px;
+   width:150px;
+   border-radius: 150px 150px 0 0;
+   -moz-border-radius: 150px 150px 0 0;
+   -webkit-border-radius: 150px 150px 0 0;
+   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+    height:50px;
+    width:100px;
+    font-size:10px;
+}
 }
 }
 .pink {
@@ -527,24 +528,24 @@ a:hover {
     }
     &:hover{
         .outimg {
-           -webkit-transform:scale(1.1);
-           -moz-transform:scale(1.1);
-           transform:scale(1.1);
-           -o-transform:scale(1.1);
-       }
-   }
+         -webkit-transform:scale(1.1);
+         -moz-transform:scale(1.1);
+         transform:scale(1.1);
+         -o-transform:scale(1.1);
+     }
+ }
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -555,8 +556,8 @@ a:hover {
         -o-transform:scale(1.1);
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -585,9 +586,9 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .section-container {
     padding: 0;
@@ -773,16 +774,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 233px;
     @media(max-width:769px) {
         width: 25%;
@@ -795,13 +796,13 @@ a:hover {
         text-align: center;
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
 }
 }
 
@@ -1030,11 +1031,11 @@ a:hover {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             @media (max-width: 769px) {
-               box-sizing: border;
-               border-bottom: 1px solid #575656; 
-           }
-       }
-   }
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
 }
 .home .footer {
     margin-top: 0;
@@ -1193,11 +1194,12 @@ a:hover {
 
 #custom_filters {
     width: auto;
+    height: 35px;
     padding-left: 100px;
     background: #F2F2F2;
     font-size: 13px;
     letter-spacing: 0px;
-    font-family: 'allerregular';
+    font-family: 'Helvetica';
     select {
         float: left;
         list-style-type: none;
@@ -1241,46 +1243,45 @@ a:hover {
 
 }
 .date_filter {
-    float:left;
-    //font-size: 14px;
+   display: inline;
+   margin:0px;
 
-    margin:0px;
+   .caret {
+    float:right;
+    margin-right: 10px;
+    margin-top: 10px;
+}
 
-    .caret {
-        float:right;
-        margin-right: 10px;
-        margin-top: 10px;
+.date_value{
+    width: 200px;
+    display: inline-block;
+    cursor: pointer;
+    background: #F2F2F2;
+    font-family: 'Helvetica';
+    padding:5px 0px 5px 5px;
+    border-left:2px solid #E8E8E7;
+    color: #868585;
+    font-weight: bold;
+    border-right:2px solid #E8E8E7;
+
+}
+.date_value_dropdown {
+    position: absolute;
+    z-index: 100000;
+    height:auto;
+    width: 200px;
+
+    background: #F2F2F2;
+    display: none;
+    span {
+        clear: both;
+        display: block;
     }
-
-    .date_value{
-        width: 200px;
-        cursor: pointer;
-        background: #F2F2F2;
-        font-family: 'allerregular';
-        padding:5px 0px 5px 5px;
-        border-left:2px solid #E8E8E7;
-        color: #868585;
-        font-weight: bold;
-        border-right:2px solid #E8E8E7;
-
+    button {
+        width: 200px !important;
+        margin:2px 0px !important;
     }
-    .date_value_dropdown {
-        position: absolute;
-        z-index: 100000;
-        height:auto;
-        width: 200px;
-
-        background: #F2F2F2;
-        display: none;
-        span {
-            clear: both;
-            display: block;
-        }
-        button {
-            width: 200px !important;
-            margin:2px 0px !important;
-        }
-    }
+}
 
 }
 #project-map {
@@ -1335,19 +1336,19 @@ a:hover {
     }
 }
 .side-transparent-block {
-   height: 150px;
-   width: 280px;
-   background-color: rgba(0, 0, 0, 0.8);
-   position: absolute;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-   top: 0;
-   left: 0;
-   z-index: 9;
-   display: none;
-   @media (max-width: 769px) {
+ height: 150px;
+ width: 280px;
+ background-color: rgba(0, 0, 0, 0.8);
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ top: 0;
+ left: 0;
+ z-index: 9;
+ display: none;
+ @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1364,7 +1365,7 @@ form .btn {
     background: #E91F4A;
     border-radius: 0;
     font-weight: normal;
-    font-family: 'allerregular';
+    font-family: 'Helvetica';
     color: #ffffff;
 }
 .jumpheading {
@@ -1387,10 +1388,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-             color: #e91f4a;
-         }
-     }
- }
+               color: #e91f4a;
+           }
+       }
+   }
 }
 .subhead {
     h3 {
@@ -1401,7 +1402,7 @@ form .btn {
     }
     color: #807f7f;
     font-size: 12px;
-    font-family: 'allerregular';
+    font-family: 'Helvetica';
     font-weight: 500;
 }
 .info-wrap {
@@ -1414,35 +1415,78 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
- display: inline-block;
- margin-left:0px;
- color: #807f7f;
- font-weight: bold;
- padding:7px 0px 5px 5px;
- border: 0px;
- border-left:3px solid #E8E8E7;
- height: 35px;
- border-radius: 0;
- width: 130px;
- -moz-appearance: none;
- -webkit-appearance: none;
- -webkit-border-radius: 0px;
- background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
- &:hover {
+   display: inline-block;
+   margin-left:0px;
+   color: #807f7f;
+   font-weight: bold;
+   padding: 0;
+   border: 0px;
+   border-left:1px solid #E8E8E7;
+   height: 35px;
+   border-radius: 0;
+   width: 130px;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   position: absolute;
+   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+   border-right: 10px solid transparent;
+
+   &:hover {
     span {
         color: #FFF;
     }
+    .transformSelectDropdown  {
+        display: block;
+    }
     background: #E91F4A url('../images/arrow-hover.png') no-repeat center right;
 }
+@media(max-width:550px) {
+    width: 100px;
+}
+}
+.transformSelect2 {
+    left: 215px;
+}
+.transformSelect3 {
+    left: 345px;
+}
+#clickMe {
+    position: absolute;
+    left: 475px;
+    height: 35px;
 }
 #custom_filters .transformSelectDropdown {
-    background-color: #E91F4A;
-    color: #FFF;
+    background-color: #FFF;
+    margin-left: -1px;
+    margin-top: 8px;
+    display: none;
+    font-size: 12px;
+    padding-bottom: 30px;
+    span {
+        color: #807f7f !important;
+        &:hover {
+            color: #E91F4A !important;
+        }
+    }
 }
 #custom_filters .transformSelect span, #custom_filters .transformSelect input[type=text] {
     background: none;
     border: none;
+    padding: 8px 20px;
+    padding-bottom: 0;
 }
+.page-wrap {
+    margin-top: -35px;
+}
+
+
+
+
+
+
 
 
 @media(max-width:991px) {
@@ -1468,5 +1512,35 @@ form .btn {
         img {
             height: 28px;
         }
+    }
+    .transformSelect2 {
+        left: 140px;
+    }
+    .transformSelect3 {
+        left: 270px;
+    }
+    #custom_filters {
+        padding-left: 30px;
+    }
+    #clickMe {
+        position: absolute;
+        left: 400px;
+        height: 35px;
+    }
+}
+@media(max-width:550px) {
+    .transformSelect2 {
+        left: 80px;
+    }
+    .transformSelect3 {
+        left: 190px;
+    }
+    #custom_filters {
+        padding-left: 0px;
+    }
+    #clickMe {
+        position: absolute;
+        left: 290px;
+        height: 35px;
     }
 }
