--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -213,8 +213,8 @@ a:hover {
     background-color: #8cc344 !important;
     padding-top: 25px !important;
     a {
-       color: #FFF !important;
-   }  
+     color: #FFF !important;
+ }  
 }
 #myNavbar {
     background: rgb(39, 36, 37);
@@ -272,21 +272,21 @@ a:hover {
             font-size: 12px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-               font-size: 10px;
-           }
-           @media(max-width:900px) {
-               font-size: 8px;
-           }
-           .caret {
+             font-size: 10px;
+         }
+         @media(max-width:900px) {
+             font-size: 8px;
+         }
+         .caret {
             position: absolute;
             right: 8px;
             top: 15px;
             @media(max-width:800px) {
-               right: 8px;
-           }
-       }
-   }
-   &:hover {
+             right: 8px;
+         }
+     }
+ }
+ &:hover {
     .dropdown-menu {
         background-color: #8cc344;
         li {
@@ -334,10 +334,10 @@ a:hover {
             font-size: 13px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-             font-size: 11px;
-         }
-     }
-     .languageSelector {
+               font-size: 11px;
+           }
+       }
+       .languageSelector {
         font-size: 13px;
         letter-spacing: 0;
         font-family: 'allerregular';
@@ -348,9 +348,9 @@ a:hover {
         width: 109px;
         padding-left: 12px;
         @media(max-width:1200px) {
-         font-size: 11px;
-     }
-     li {
+           font-size: 11px;
+       }
+       li {
         height: 100%;
         width: 109px;
         margin-left: -7px;
@@ -479,9 +479,9 @@ a:hover {
     &:hover {
         #slider-1 {
             h1 {
-               color: #E9204A;
-           } 
-           h2 {
+             color: #E9204A;
+         } 
+         h2 {
             color: #000;
         }
     }
@@ -508,12 +508,12 @@ a:hover {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   height:100%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ height:100%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -526,9 +526,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
- color:#898B8E;
+   color:#898B8E;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -578,7 +578,7 @@ a:hover {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -615,28 +615,28 @@ a:hover {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:-5px;
-   -webkit-transition: all 1s ease 0s; 
-   transition: all 1s ease 0s;
-   .btn {
-     display:inline-block;
-     padding-top:5px;
-     font-size:15px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:60px;
-     width:125px;
-     border-radius: 100px 100px 0 0;
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:-5px;
+ -webkit-transition: all 1s ease 0s; 
+ transition: all 1s ease 0s;
+ .btn {
+   display:inline-block;
+   padding-top:5px;
+   font-size:15px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:60px;
+   width:125px;
+   border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -719,15 +719,15 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -735,8 +735,8 @@ a:hover {
 
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -765,22 +765,22 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .quarter, .quarter2 {
     &:hover {
-     .overlay{
+       .overlay{
         display:none;
     }
     .outimg {
-       -webkit-transform:scale(1.1);
-       -moz-transform:scale(1.1);
-       transform:scale(1.1);
-       -o-transform:scale(1.1);
-   }
-   .post-navigate {
+     -webkit-transform:scale(1.1);
+     -moz-transform:scale(1.1);
+     transform:scale(1.1);
+     -o-transform:scale(1.1);
+ }
+ .post-navigate {
     bottom:0px;
 
 }
@@ -995,16 +995,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -1017,14 +1017,14 @@ a:hover {
         text-align: center;
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
- .last {
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
+   .last {
     border: none;
 }
 }
@@ -1072,7 +1072,7 @@ a:hover {
                     
                     width: 22px;
                     //height: 4px;
-                   
+                    
                     //background: #FFFFFF;
                     margin:0 auto !important;
                     margin-top: 0px !important;
@@ -1108,12 +1108,12 @@ a:hover {
         }
     }
 
-.nav-links {
-    position: absolute;
-    bottom: 44px;
-    right: -10px !important;
-    margin-right: 0px;
-}
+    .nav-links {
+        position: absolute;
+        bottom: 44px;
+        right: -10px !important;
+        margin-right: 0px;
+    }
 }//end nav-icons
 
 .slider-caption {
@@ -1234,11 +1234,11 @@ a:hover {
             border-bottom: 1px solid #575656; 
             cursor: pointer;
             @media (max-width: 769px) {
-               box-sizing: border;
-               border-bottom: 1px solid #575656; 
-           }
-       }
-   }
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
 }
 .home .footer {
     margin-top: 0;
@@ -1415,10 +1415,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-               color: #e91f4a;   
-           }
-       }
-   }
+             color: #e91f4a;   
+         }
+     }
+ }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1519,14 +1519,14 @@ a:hover {
 #sliderEffects{
     width: 25%;
 //text-align: center;
-    float: right;
-    height: 75px;
+float: right;
+height: 75px;
    // padding-left: 100px;
    // background: #F2F2F2;
-    font-size: 13px;
-    letter-spacing: 0px;
-    font-family: 'Helvetica';
-    select {
+   font-size: 13px;
+   letter-spacing: 0px;
+   font-family: 'Helvetica';
+   select {
         //float: left;
         //list-style-type: none;
         //margin-left:0px;
@@ -1560,12 +1560,12 @@ a:hover {
         font-weight: normal;
         padding:5px 0px 5px 5px;
         border-radius: 0px;
-            
+        
     }
     .duration_div {
         position:absolute;
         right:1%;
-       top:0;
+        top:0;
         text-align:right;
         input {
             width:30px;
@@ -1575,22 +1575,22 @@ a:hover {
         .btn {
             width:auto;
             height:auto;
-             background:#E91F4A;
+            background:#E91F4A;
             color:#ffffff;
-        padding-top:0;
-        padding-bottom: 0;
-        margin-right: 0px;
-        padding-right: 2px;
+            padding-top:0;
+            padding-bottom: 0;
+            margin-right: 0px;
+            padding-right: 2px;
         }
     }
 
 
 }
 .date_filter {
- display: inline;
- margin:0px;
+   display: inline;
+   margin:0px;
 
- .caret {
+   .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1680,19 +1680,19 @@ a:hover {
     }
 }
 .side-transparent-block {
-   height: 150px;
-   width: 280px;
-   background-color: rgba(0, 0, 0, 0.8);
-   position: absolute;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-   top: 0;
-   left: 0;
-   z-index: 9;
-   display: none;
-   @media (max-width: 769px) {
+ height: 150px;
+ width: 280px;
+ background-color: rgba(0, 0, 0, 0.8);
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ top: 0;
+ left: 0;
+ z-index: 9;
+ display: none;
+ @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1732,10 +1732,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-             color: #e91f4a;
-         }
-     }
- }
+               color: #e91f4a;
+           }
+       }
+   }
 }
 .subhead {
     h3 {
@@ -1759,26 +1759,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
- display: inline-block;
- margin-left:0px;
- color: #807f7f;
- font-weight: bold;
- padding: 0;
- border: 0px;
- border-left:1px solid #E8E8E7;
- height: 35px;
- border-radius: 0;
- width: 130px;
- -moz-appearance: none;
- -webkit-appearance: none;
- -webkit-border-radius: 0px;
- -moz-border-radius: 0px;
- border-radius: 0px;
- position: absolute;
- background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
- border-right: 10px solid transparent;
+   display: inline-block;
+   margin-left:0px;
+   color: #807f7f;
+   font-weight: bold;
+   padding: 0;
+   border: 0px;
+   border-left:1px solid #E8E8E7;
+   height: 35px;
+   border-radius: 0;
+   width: 130px;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   position: absolute;
+   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+   border-right: 10px solid transparent;
 
- &:hover {
+   &:hover {
     span {
         color: #FFF;
     }
@@ -2125,8 +2125,14 @@ form .btn {
     }
 }
 .yamm {
-     display: block;
-    @media(max-width: 769px) {
-        display: none;
-    }
+   display: block;
+   @media(max-width: 769px) {
+    display: none;
+}
+}
+
+.circle.bottom {
+    position: absolute;
+    bottom: -17px;
+    left: 49.4%;
 }
